Add API: single-file and single-image.

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 APP_PLATFORM=Win
-APP_IMAGE_STORAGE=E:\\static-service\\uploads
+APP_FILES_STORAGE=E:\\static-service\\uploads\\files
+APP_IMAGES_STORAGE=E:\\static-service\\uploads\\images
