--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "pug": "2.0.0-beta11"
