--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 APP_PLATFORM=Win
 APP_FILES_STORAGE=E:\\static-service\\uploads\\files
 APP_IMAGES_STORAGE=E:\\static-service\\uploads\\images
+APP_MONGODB_LINK=mongodb://localhost:27017/testdb
