Add API: '/public/*'.

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 APP_PLATFORM=Win
 APP_FILES_STORAGE=E:\\static-service\\uploads\\files
 APP_IMAGES_STORAGE=E:\\static-service\\uploads\\images
+APP_PUBLIC_STORAGE=E:\\static-service\\public
 APP_MONGODB_LINK=mongodb://localhost:27017/testdb
