--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
 APP_PLATFORM=Win
+APP_RESOURECES_BASE_URL=http://localhost:3030
 APP_FILES_STORAGE=E:\\static-service\\uploads\\files
 APP_IMAGES_STORAGE=E:\\static-service\\uploads\\images
 APP_PUBLIC_STORAGE=E:\\static-service\\public
+APP_MONGODB_NAME=testdb
 APP_MONGODB_LINK=mongodb://localhost:27017/testdb
