Add authorize for the API '/delete/multi'.

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,4 @@ APP_IMAGES_STORAGE=E:\\static-service\\uploads\\images
 APP_PUBLIC_STORAGE=E:\\static-service\\public
 APP_MONGODB_NAME=testdb
 APP_MONGODB_LINK=mongodb://localhost:27017/testdb
+APP_ACCESS_TOKEN=ABCD
