--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "debug": "~4.2.0",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.0",
     "mongodb": "^3.6.2",
-    "morgan": "~1.9.1",
+    "morgan": "~1.10.0",
     "multer": "^1.4.2",
-    "pug": "2.0.0-beta11"
+    "pug": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
