--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x]
+        mongodb-version: [4.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,6 +25,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Use MongoDB ${{ matrix.mongodb-version }}
+      uses: supercharge/mongodb-github-action@1.3.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
