--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x]
-        mongodb-version: [4.x]
+        mongodb-version: [4.2]
 
     steps:
     - uses: actions/checkout@v2
