--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
+    "moment": "^2.29.0",
     "mongodb": "^3.6.2",
     "morgan": "~1.10.0",
     "multer": "^1.4.2",
