--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
+    "iconv-lite": "^0.6.2",
     "moment": "^2.29.0",
     "mongodb": "^3.6.2",
     "morgan": "~1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "jest": "^26.4.2",
